partially added conversions in JS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div id="input1Div">
-            <label for="input1" class="toLeft">Foco:</label>
+            <label for="input1" class="toLeft">Foco do espelho:</label>
             <div class="inputs">
                 <input id="input1" type="number" placeholder="Digite o Foco">
                 <select name="units1" id="units1" class="units">
