--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div class="inputs">
                 <input id="input1" type="number" placeholder="Digite o Foco">
                 <select name="units1" id="units1" class="units">
-                    <option value="">cm</option>
-                    <option value="">m</option>
-                    <option value="">km</option>
-                    <option value="">ft</option>
-                    <option value="">yd</option>
-                    <option value="">mi</option>
+                    <option value="1">cm</option>
+                    <option value="100">m</option>
+                    <option value="100000">km</option>
+                    <option value="30.48">ft</option>
+                    <option value="91.44">yd</option>
+                    <option value="160934.4">mi</option>
                 </select>
             </div>
             
@@ -41,12 +41,12 @@
             <div class="inputs">
                 <input id="input3" type="number" placeholder="Digite a altura do objeto">
                 <select name="units1" id="units3" class="units">
-                    <option value="">cm</option>
-                    <option value="">m</option>
-                    <option value="">km</option>
-                    <option value="">ft</option>
-                    <option value="">yd</option>
-                    <option value="">mi</option>
+                    <option value="1">cm</option>
+                    <option value="100">m</option>
+                    <option value="100000">km</option>
+                    <option value="30.48">ft</option>
+                    <option value="91.44">yd</option>
+                    <option value="160934.4">mi</option>
                 </select>
             </div>
         </div>
