--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Espelhos Esfericos</title>
-    <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="imagens/images__1_-removebg-preview.png">
 </head>
@@ -15,12 +14,12 @@
             <div class="inputs">
                 <input id="input1" type="number" placeholder="Digite o Foco">
                 <select name="units1" id="units1" class="units">
-                    <option value="1">cm</option>
-                    <option value="100">m</option>
-                    <option value="100000">km</option>
-                    <option value="30.48">ft</option>
-                    <option value="91.44">yd</option>
-                    <option value="160934.4">mi</option>
+                    <option value="1">cm&emsp;(Centímetros)</option>
+                    <option value="100">m&emsp;(Metros)</option>
+                    <option value="100000">km&emsp;(Quilômetros)</option>
+                    <option value="30.48">ft&emsp;(Pés)</option>
+                    <option value="91.44">yd&emsp;(Jardas)</option>
+                    <option value="160934.4">mi&emsp;(Milhas)</option>
                 </select>
             </div>
             
@@ -28,12 +27,12 @@
             <div class="inputs">
                 <input id="input2" type="number" placeholder="Digite a Distância do objeto ao espelho">
                 <select name="units1" id="units2" class="units">
-                    <option value="1">cm</option>
-                    <option value="100">m</option>
-                    <option value="100000">km</option>
-                    <option value="30.48">ft</option>
-                    <option value="91.44">yd</option>
-                    <option value="160934.4">mi</option>
+                    <option value="1">cm&emsp;(Centímetros)</option>
+                    <option value="100">m&emsp;(Metros)</option>
+                    <option value="100000">km&emsp;(Quilômetros)</option>
+                    <option value="30.48">ft&emsp;(Pés)</option>
+                    <option value="91.44">yd&emsp;(Jardas)</option>
+                    <option value="160934.4">mi&emsp;(Milhas)</option>
                 </select>
             </div>
 
@@ -41,12 +40,12 @@
             <div class="inputs">
                 <input id="input3" type="number" placeholder="Digite a altura do objeto">
                 <select name="units1" id="units3" class="units">
-                    <option value="1">cm</option>
-                    <option value="100">m</option>
-                    <option value="100000">km</option>
-                    <option value="30.48">ft</option>
-                    <option value="91.44">yd</option>
-                    <option value="160934.4">mi</option>
+                    <option value="1">cm&emsp;(Centímetros)</option>
+                    <option value="100">m&emsp;(Metros)</option>
+                    <option value="100000">km&emsp;(Quilômetros)</option>
+                    <option value="30.48">ft&emsp;(Pés)</option>
+                    <option value="91.44">yd&emsp;(Jardas)</option>
+                    <option value="160934.4">mi&emsp;(Milhas)</option>
                 </select>
             </div>
         </div>
@@ -54,17 +53,19 @@
         <div class="inputs">
             <button id="buttoncalcular">Calcular</button>
             <select name="units1" id="units-res" class="units">
-                <option value="1">cm</option>
-                <option value="100">m</option>
-                <option value="100000">km</option>
-                <option value="30.48">ft</option>
-                <option value="91.44">yd</option>
-                <option value="160934.4">mi</option>
+                <option value="1">cm&emsp;(Centímetros)</option>
+                <option value="100">m&emsp;(Metros)</option>
+                <option value="100000">km&emsp;(Quilômetros)</option>
+                <option value="30.48">ft&emsp;(Pés)</option>
+                <option value="91.44">yd&emsp;(Jardas)</option>
+                <option value="160934.4">mi&emsp;(Milhas)</option>
             </select>
         </div>
 
         <h1 class="resultado">Resultado:</h1>
         <span class="resultado"></span>        
     </div>
+    
+    <script src="main.jCentímetros&emsp;(cm)></script>
 </body>
 </html>
